--- a/res/layout/activity_pin.xml
+++ b/res/layout/activity_pin.xml
@@ -4,7 +4,6 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
-              android:padding="32dp"
 >
     <ImageView
             android:layout_width="wrap_content"
@@ -37,7 +36,6 @@
             android:gravity="center"
             android:hint="@string/pin_required"
             android:textSize="34dp"
-            android:layout_marginTop="@dimen/pin_margin"
-            android:layout_marginBottom="@dimen/pin_margin"
+            android:layout_marginTop="@dimen/modal_image_margin"
     />
 </LinearLayout>
