--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -6,12 +6,11 @@
         <item name="colorAccent">@color/holo_blue_light</item>
         <item name="android:textColor">@android:color/primary_text_light</item>
     </style>
-    <style name="Miary.Theme.Fullscreen" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@color/fullscreen_background</item>
+    <style name="Miary.Theme.Modal" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/holo_blue_light</item>
         <item name="colorPrimaryDark">@color/holo_blue_dark</item>
         <item name="colorAccent">@color/holo_blue_light</item>
-        <item name="android:textColor">@android:color/primary_text_light</item>
-        <item name="android:editTextStyle">@android:style/Widget.Holo.EditText</item>
+        <item name="colorControlActivated">@color/holo_blue_light</item>
+        <item name="colorControlHighlight">@color/holo_blue_light</item>
     </style>
 </resources>
