--- a/res/layout/fragment_feed.xml
+++ b/res/layout/fragment_feed.xml
@@ -4,11 +4,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
-    <ListView
-            android:id="@+id/feed_list_view"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/feed_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
+            android:scrollbars="vertical"
             android:paddingTop="64dp"
             android:divider="@null"
             android:dividerHeight="0dp"
