--- a/res/layout/fragment_feed.xml
+++ b/res/layout/fragment_feed.xml
@@ -17,19 +17,25 @@
             android:id="@+id/feed_empty_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:visibility="gone"
             android:gravity="center"
             android:paddingTop="?attr/actionBarSize"
     >
-        <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/feed_empty"
-                style="@android:style/TextAppearance.Medium"
-                android:textStyle="italic"
-                android:textColor="@color/darker_gray"
+        <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:orientation="vertical"
+                android:background="@drawable/note_add_background"
                 android:gravity="center"
-        />
+        >
+             <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:text="@string/feed_empty"
+                    android:textColor="@color/darker_gray"
+                    android:textSize="24dp"
+                    android:gravity="center"
+            />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
