--- a/res/layout/fragment_choose_color.xml
+++ b/res/layout/fragment_choose_color.xml
@@ -15,28 +15,28 @@
                 android:id="@+id/choose_color_white"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_white"
+                android:background="@drawable/color_circle_white"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
         <ImageView
                 android:id="@+id/choose_color_red"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_red"
+                android:background="@drawable/color_circle_red"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
         <ImageView
                 android:id="@+id/choose_color_orange"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_orange"
+                android:background="@drawable/color_circle_orange"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
         <ImageView
                 android:id="@+id/choose_color_yellow"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_yellow"
+                android:background="@drawable/color_circle_yellow"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
     </LinearLayout>
@@ -49,28 +49,28 @@
                 android:id="@+id/choose_color_gray"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_gray"
+                android:background="@drawable/color_circle_gray"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
         <ImageView
                 android:id="@+id/choose_color_green"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_green"
+                android:background="@drawable/color_circle_green"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
         <ImageView
                 android:id="@+id/choose_color_blue"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_blue"
+                android:background="@drawable/color_circle_blue"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
         <ImageView
                 android:id="@+id/choose_color_violet"
                 android:layout_width="@dimen/choose_color_circle_size"
                 android:layout_height="@dimen/choose_color_circle_size"
-                android:src="@drawable/color_circle_violet"
+                android:background="@drawable/color_circle_violet"
                 android:layout_margin="@dimen/choose_color_circle_margin"
         />
     </LinearLayout>
