--- a/res/layout/fragment_feed.xml
+++ b/res/layout/fragment_feed.xml
@@ -9,9 +9,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:paddingTop="64dp"
-            android:divider="@null"
-            android:dividerHeight="0dp"
+            android:paddingTop="?attr/actionBarSize"
+            android:paddingBottom="@dimen/feed_item_external_margin"
+            android:paddingLeft="@dimen/feed_item_external_margin"
+            android:paddingRight="@dimen/feed_item_external_margin"
     />
     <LinearLayout
             android:id="@+id/feed_empty_view"
