#125 #142 Shade cards on touch

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="dark_shading">#43000000</color>
     <!-- Toolbar backgrounds. -->
-    <color name="toolbar_background_note">#43000000</color>
+    <color name="toolbar_background_note">@color/dark_shading</color>
     <color name="toolbar_background_feed">#CC0099CC</color>
     <!-- Gmail -->
     <color name="drawer_item_foreground">#ff58585b</color>
@@ -21,6 +22,4 @@
     <!-- Misc. Refactor these. -->
     <color name="lighter_gray">#ddd</color>
     <color name="darker_gray">#aaa</color>
-    <color name="background_holo_light_transparent">#00f3f3f3</color>
-    <color name="hint_foreground_light">#808080</color>
 </resources>
