--- a/res/drawable/color_circle_white.xml
+++ b/res/drawable/color_circle_white.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
     <solid android:color="@android:color/white"/>
-    <stroke android:color="@color/lighter_gray" android:width="1dp"/>
+    <stroke android:color="@color/light_divider" android:width="1dp"/>
 </shape>
