--- a/res/drawable/fab.xml
+++ b/res/drawable/fab.xml
@@ -2,18 +2,18 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="@color/holo_blue_dark"/>
+            <solid android:color="@color/blue_grey_700"/>
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="oval">
-            <solid android:color="@color/holo_blue_dark"/>
+            <solid android:color="@color/blue_grey_700"/>
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/holo_blue_light"/>
-            <stroke android:width="2dp" android:color="#8033b5e5"/>
+            <solid android:color="@color/blue_grey_500"/>
+            <stroke android:width="2dp" android:color="#80607D8B"/>
         </shape>
     </item>
 </selector>
