--- a/res/layout/drawer_item.xml
+++ b/res/layout/drawer_item.xml
@@ -29,7 +29,7 @@
             android:layout_marginLeft="@dimen/drawer_item_margin"
             android:layout_marginRight="@dimen/drawer_item_margin"
             android:visibility="gone"
-            android:textColor="@color/drawer_item_foreground"
+            android:textColor="@color/blue_grey_500"
             android:textStyle="bold"
             android:textSize="14dp"
     />
