--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -54,6 +54,7 @@
             <include android:id="@+id/drawer_item_drafts" layout="@layout/drawer_item"/>
             <include layout="@layout/drawer_divider"/>
             <include android:id="@+id/drawer_item_settings" layout="@layout/drawer_item"/>
+            <include android:id="@+id/drawer_item_feedback" layout="@layout/drawer_item"/>
         </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
 </RelativeLayout>
