--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Material colors. -->
-    <color name="dark_foreground_primary">#FFFFFFFF</color>
-    <color name="dark_hint">#4DFFFFFF</color>
+    <color name="dark_text_hint">#4DFFFFFF</color>
+    <color name="dark_text_primary">#FFFFFFFF</color>
     <color name="light_disabled">#43000000</color>
     <color name="light_divider">#1F000000</color>
-    <color name="light_foreground_primary">#DE000000</color>
-    <color name="light_foreground_secondary">#8A000000</color>
-    <color name="light_hint">@color/light_disabled</color>
+    <color name="light_text_helper">#61000000</color>
+    <color name="light_text_hint">@color/light_disabled</color>
+    <color name="light_text_primary">#DE000000</color>
+    <color name="light_text_secondary">#8A000000</color>
     <!-- Toolbar backgrounds. -->
-    <color name="toolbar_background_note">@color/light_hint</color>
+    <color name="toolbar_background_note">@color/light_text_hint</color>
     <color name="toolbar_background_feed">#DE607D8B</color> <!-- Blue Grey 87% -->
     <!-- Material palette. -->
     <color name="blue_300">#64B5F6</color>
