--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,8 +11,9 @@
     <color name="light_text_secondary">#8A000000</color>
     <!-- Toolbar backgrounds. -->
     <color name="toolbar_background_note">@color/light_text_hint</color>
-    <color name="toolbar_background_feed">#DE607D8B</color> <!-- Blue Grey 87% -->
+    <color name="toolbar_background_feed">#DE2196F3</color> <!-- Blue 500 87% -->
     <!-- Material palette. -->
+    <color name="blue_200">#90CAF9</color>
     <color name="blue_300">#64B5F6</color>
     <color name="blue_400">#42A5F5</color>
     <color name="blue_500">#2196F3</color>
@@ -28,6 +29,7 @@
     <color name="light_blue_400">#29B6F6</color>
     <color name="light_blue_500">#03A9F4</color>
     <color name="light_green_500">#8BC34A</color>
+    <color name="orange_300">#FFB74D</color>
     <color name="orange_400">#FFA726</color>
     <color name="orange_500">#FF9800</color>
     <color name="purple_200">#CE93D8</color>
@@ -41,5 +43,4 @@
     <color name="yellow_500">#FFEB3B</color>
     <!-- Misc. Refactor these. -->
     <color name="background_holo_light">#fff3f3f3</color>
-    <color name="drawer_item_foreground">#ff58585b</color>
 </resources>
