--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Miary.Theme.Application" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/blue_grey_500</item>
-        <item name="colorPrimaryDark">@color/blue_grey_500</item>
-        <item name="colorAccent">@color/blue_grey_500</item>
+        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimaryDark">@color/blue_700</item>
+        <item name="colorAccent">@color/blue_500</item>
         <item name="android:textColor">@color/light_text_primary</item>
     </style>
     <style name="Miary.Theme.Modal" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/blue_grey_500</item>
-        <item name="colorPrimaryDark">@color/blue_grey_500</item>
-        <item name="colorAccent">@color/blue_grey_500</item>
-        <item name="colorControlActivated">@color/blue_grey_500</item>
-        <item name="colorControlHighlight">@color/blue_grey_500</item>
+        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimaryDark">@color/blue_700</item>
+        <item name="colorAccent">@color/blue_500</item>
+        <item name="colorControlActivated">@color/blue_500</item>
+        <item name="colorControlHighlight">@color/blue_500</item>
     </style>
 </resources>
