--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary">@color/blue_500</color>
     <!-- Material colors. -->
     <color name="dark_text_hint">#4DFFFFFF</color>
     <color name="dark_text_primary">#FFFFFFFF</color>
-    <color name="light_disabled">#43000000</color>
     <color name="light_divider">#1F000000</color>
     <color name="light_text_helper">#61000000</color>
-    <color name="light_text_hint">@color/light_disabled</color>
+    <color name="light_text_hint">#43000000</color>
     <color name="light_text_primary">#DE000000</color>
     <color name="light_text_secondary">#8A000000</color>
+    <color name="button_background_focused">#33999999</color>
+    <color name="button_background_pressed">#66999999</color>
     <!-- Toolbar backgrounds. -->
     <color name="toolbar_background_note">@color/light_text_hint</color>
     <color name="toolbar_background_feed">#DE2196F3</color> <!-- Blue 500 87% -->
