--- a/res/menu/developer.xml
+++ b/res/menu/developer.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_item_clear_shared_preferences" android:title="Clear shared preferences"/>
+    <item android:id="@+id/menu_item_developer_clear_shared_preferences" android:title="Clear shared preferences"/>
+    <item android:id="@+id/menu_item_developer_delete_all_notes" android:title="Delete all notes"/>
 </menu>
