--- a/res/layout/activity_authenticator.xml
+++ b/res/layout/activity_authenticator.xml
@@ -4,53 +4,33 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:gravity="center"
 >
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher"
-            android:layout_marginBottom="8dp"
-    />
-    <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/app_name"
-            style="@android:style/TextAppearance.Large"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginBottom="@dimen/modal_image_margin"
-    />
-    <EditText
-            android:id="@+id/auth_email_edit_text"
+    <include layout="@layout/toolbar"/>
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:hint="@string/email_hint"
-            android:inputType="textEmailAddress"
-            android:singleLine="true"
-    />
-    <EditText
-            android:id="@+id/auth_password_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:inputType="textPassword"
-            android:hint="@string/password_hint"
-            android:singleLine="true"
-    />
-    <Button
-            android:id="@+id/auth_sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="@string/auth_sign_in_button"
-    />
-    <Button
-            android:id="@+id/auth_sign_up_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/auth_sign_up_button"
-    />
+            android:padding="@dimen/fullscreen_dialog_padding"
+    >
+        <EditText
+                android:id="@+id/auth_email_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/text_field_vertical_padding"
+                android:paddingBottom="@dimen/text_field_vertical_padding"
+                android:hint="@string/email_hint"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+        />
+        <EditText
+                android:id="@+id/auth_password_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/text_field_vertical_padding"
+                android:paddingBottom="@dimen/text_field_vertical_padding"
+                android:inputType="textPassword"
+                android:hint="@string/password_hint"
+                android:singleLine="true"
+        />
+    </LinearLayout>
 </LinearLayout>
