--- a/res/layout/activity_feedback.xml
+++ b/res/layout/activity_feedback.xml
@@ -25,8 +25,8 @@
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
+                android:paddingLeft="@dimen/text_field_helper_padding"
+                android:paddingRight="@dimen/text_field_helper_padding"
                 android:paddingBottom="@dimen/text_field_divider_padding"
                 android:textColor="@color/light_text_helper"
                 android:text="@string/helper_optional"
