--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -1,54 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_height="match_parent"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_holo_light"
 >
-    <android.support.v4.widget.DrawerLayout
-            android:id="@+id/drawer_layout"
+    <!-- Activity. -->
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/background_holo_light"
     >
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <fragment android:name="in.eigene.miary.fragments.FeedFragment"
-                      android:id="@+id/fragment_feed"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:layout_marginLeft="@dimen/feed_item_external_margin"
-                      android:layout_marginRight="@dimen/feed_item_external_margin"
-                      android:layout_marginBottom="@dimen/feed_item_external_margin"
-                      tools:layout="@layout/fragment_feed"
-            />
-            <include layout="@layout/toolbar"/>
-            <ImageButton
-                    android:id="@+id/fab_button"
-                    android:layout_width="58dp"
-                    android:layout_height="58dp"
-                    android:layout_margin="15dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:src="@drawable/ic_create_white_24dp"
-                    android:tint="@android:color/white"
-                    android:background="@drawable/fab"
-                    android:scaleType="center"
-            />
-        </RelativeLayout>
-        <!-- Navigation drawer. -->
+        <fragment android:name="in.eigene.miary.fragments.FeedFragment"
+                  android:id="@+id/fragment_feed"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_marginLeft="@dimen/feed_item_external_margin"
+                  android:layout_marginRight="@dimen/feed_item_external_margin"
+                  android:layout_marginBottom="@dimen/feed_item_external_margin"
+                  tools:layout="@layout/fragment_feed"
+        />
+        <include layout="@layout/toolbar"/>
+        <ImageButton
+                android:id="@+id/fab_button"
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_margin="15dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/ic_create_white_24dp"
+                android:tint="@android:color/white"
+                android:background="@drawable/fab"
+                android:scaleType="center"
+        />
+    </RelativeLayout>
+    <!-- Navigation drawer. -->
+    <ScrollView
+            android:id="@+id/drawer"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:paddingBottom="8dp"
+            android:background="@android:color/white"
+            android:clickable="true"
+    >
         <LinearLayout
-                android:id="@+id/drawer"
-                android:orientation="vertical"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:background="@android:color/white"
-                android:clickable="true"
-                android:paddingTop="8dp"
+                android:orientation="vertical"
         >
+            <!-- Profile. -->
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/drawer_item_margin"
+                    android:paddingRight="@dimen/drawer_item_margin"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:orientation="vertical"
+                    android:clickable="true"
+                    android:background="@drawable/drawer_item_background"
+            >
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="56dp"
+                        android:src="@drawable/ic_account_circle_grey600_48dp"
+                        android:scaleType="center"
+                />
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:orientation="vertical"
+                        android:gravity="center_vertical"
+                >
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text="Offline Account"
+                    />
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="eigenein@example.org"
+                    />
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@color/light_divider"
+            />
             <include android:id="@+id/drawer_item_diary" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_starred" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_drafts" layout="@layout/drawer_item"/>
@@ -63,5 +108,5 @@
             <include android:id="@+id/drawer_item_feedback" layout="@layout/drawer_item"/>
             <include android:id="@+id/drawer_item_about" layout="@layout/drawer_item"/>
         </LinearLayout>
-    </android.support.v4.widget.DrawerLayout>
-</RelativeLayout>
+    </ScrollView>
+</android.support.v4.widget.DrawerLayout>
