--- a/res/layout/activity_feed.xml
+++ b/res/layout/activity_feed.xml
@@ -53,6 +53,7 @@
         >
             <!-- Profile. -->
             <LinearLayout
+                    android:id="@+id/drawer_account"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="@dimen/drawer_item_margin"
@@ -76,15 +77,16 @@
                         android:gravity="center_vertical"
                 >
                     <TextView
+                            android:id="@+id/drawer_account_type"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:text="Offline Account"
                     />
                     <TextView
+                            android:id="@+id/drawer_account_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="eigenein@example.org"
                     />
                 </LinearLayout>
             </LinearLayout>
