--- a/res/layout/fragment_feed.xml
+++ b/res/layout/fragment_feed.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
->
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/feed_view"
+        >
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/feed_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingTop="?attr/actionBarSize"
-            android:paddingBottom="@dimen/feed_item_external_margin"
-            android:paddingLeft="@dimen/feed_item_external_margin"
-            android:paddingRight="@dimen/feed_item_external_margin"
-    />
+    >
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/feed_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingTop="?attr/actionBarSize"
+                android:paddingBottom="@dimen/feed_item_external_margin"
+                android:paddingLeft="@dimen/feed_item_external_margin"
+                android:paddingRight="@dimen/feed_item_external_margin"
+        />
+    </android.support.v4.widget.SwipeRefreshLayout>
     <LinearLayout
             android:id="@+id/feed_empty_view"
             android:layout_width="match_parent"
