--- a/res/xml/syncadapter.xml
+++ b/res/xml/syncadapter.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:contentAuthority="in.eigene.miary.provider"
         android:accountType="miary.eigene.in"
-        android:userVisible="false"
+        android:userVisible="true"
         android:supportsUploading="true"
         android:allowParallelSyncs="false"
         android:isAlwaysSyncable="true"
