--- a/res/layout-land/fragment_dialog_custom_date.xml
+++ b/res/layout-land/fragment_dialog_custom_date.xml
@@ -10,10 +10,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:calendarViewShown="false"
+            android:datePickerMode="spinner"
     />
     <TimePicker
             android:id="@+id/dialog_custom_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:timePickerMode="spinner"
     />
 </LinearLayout>
