#153 Try to fix runtime exception (race condition on setNoteUuid)

--- a/res/layout/activity_note.xml
+++ b/res/layout/activity_note.xml
@@ -5,11 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
-    <fragment android:name="in.eigene.miary.fragments.NoteFragment"
-              android:id="@+id/fragment_note"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:layout="@layout/fragment_note"
+    <FrameLayout
+            android:id="@+id/fragment_note"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
     />
     <include layout="@layout/toolbar"/>
 </RelativeLayout>
