Fix building release APK

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,7 +10,7 @@
         <item>@string/dialog_reminder_saturday</item>
         <item>@string/dialog_reminder_sunday</item>
     </string-array>
-    <string-array name="weekdays_values">
+    <string-array name="weekdays_values" translatable="false">
         <item>2</item>
         <item>3</item>
         <item>4</item>
