#157 Add multi-column switch. Use reverse from layout manager.

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="feed_columns">1</integer>
+    <integer name="feed_multi_column_columns">2</integer>
 </resources>
