--- a/app/src/main/res/values-w840dp/integers.xml
+++ b/app/src/main/res/values-w840dp/integers.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="feed_columns">3</integer>
+    <integer name="feed_multi_column_columns">3</integer>
 </resources>
