--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -5,7 +5,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_holo_light"
+        android:background="@color/grey_50"
 >
     <!-- Activity. -->
     <RelativeLayout
@@ -48,7 +48,7 @@
     >
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
         >
             <!-- Profile. -->
