--- a/app/src/main/res/layout/divider.xml
+++ b/app/src/main/res/layout/divider.xml
@@ -4,4 +4,5 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="@color/light_divider"
+        android:clickable="true"
 />
