--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -2,13 +2,14 @@
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_50"
 >
     <!-- Activity. -->
-    <RelativeLayout
+    <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
     >
@@ -23,20 +24,16 @@
         />
         <include layout="@layout/toolbar"/>
         <!-- FAB. -->
-        <ImageButton
-                android:id="@+id/fab_button"
-                android:layout_width="58dp"
-                android:layout_height="58dp"
-                android:layout_margin="15dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:src="@drawable/ic_create_white_24dp"
-                android:tint="@android:color/white"
-                android:background="@drawable/fab"
-                android:scaleType="center"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/ic_create_white_24dp"
+            app:borderWidth="0dp"
+            style="@style/Miary.Theme.Fab"
         />
-    </RelativeLayout>
+    </FrameLayout>
     <!-- Navigation drawer. -->
     <ListView
         android:id="@+id/drawer"
