--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -10,19 +10,24 @@
 >
     <!-- Activity. -->
     <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-    >
-        <fragment android:name="in.eigene.miary.fragments.FeedFragment"
-                  android:id="@+id/fragment_feed"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_marginLeft="@dimen/feed_item_external_margin"
-                  android:layout_marginRight="@dimen/feed_item_external_margin"
-                  android:layout_marginBottom="@dimen/feed_item_external_margin"
-                  tools:layout="@layout/fragment_feed"
-        />
-        <include layout="@layout/toolbar"/>
+            android:orientation="vertical">
+
+            <include layout="@layout/toolbar"/>
+            <fragment android:name="in.eigene.miary.fragments.FeedFragment"
+                      android:id="@+id/fragment_feed"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:layout_marginLeft="@dimen/feed_item_external_margin"
+                      android:layout_marginRight="@dimen/feed_item_external_margin"
+                      android:layout_marginBottom="@dimen/feed_item_external_margin"
+                      tools:layout="@layout/fragment_feed"/>
+        </LinearLayout>
         <!-- FAB. -->
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_button"
@@ -31,8 +36,7 @@
             android:layout_gravity="end|bottom"
             android:src="@drawable/ic_create_white_24dp"
             app:borderWidth="0dp"
-            style="@style/Miary.Theme.Fab"
-        />
+            style="@style/Miary.Theme.Fab"/>
     </FrameLayout>
     <!-- Navigation drawer. -->
     <ListView
