--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- http://stackoverflow.com/a/8639921/359730 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/note_edit_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:paddingTop="?attr/actionBarSize"
-              android:focusableInTouchMode="true"
-><!-- http://stackoverflow.com/a/8639921/359730 -->
+              android:focusableInTouchMode="true">
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
-            android:orientation="vertical"
-    >
+            android:orientation="vertical">
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_gravity="center"
-        >
+                android:layout_gravity="center">
+
             <EditText
                     android:id="@+id/note_edit_title"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     style="@android:style/TextAppearance.Medium"
                     android:hint="@string/note_title_hint"
                     android:background="@android:color/transparent"
                     android:padding="@dimen/note_edit_text_padding"
                     android:capitalize="sentences"
-                    android:layout_weight="1"
-            />
+                    android:layout_weight="1"/>
             <ImageButton
                     android:id="@+id/note_button_leave_fullscreen"
                     android:layout_width="@dimen/launcher_icon_size"
@@ -36,20 +35,18 @@
                     android:src="@drawable/ic_fullscreen_exit_black_24dp"
                     android:background="@null"
                     android:visibility="gone"
-                    android:scaleType="center"
-            />
+                    android:scaleType="center"/>
         </LinearLayout>
         <EditText
                 android:id="@+id/note_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="textMultiLine|textCapSentences"
-                android:gravity="top|left"
+                android:gravity="top|start"
                 android:scrollbars="vertical"
                 style="@android:style/TextAppearance.Medium"
                 android:hint="@string/note_hint"
                 android:background="@android:color/transparent"
-                android:padding="@dimen/note_edit_text_padding"
-        />
+                android:padding="@dimen/note_edit_text_padding"/>
     </LinearLayout>
 </LinearLayout>
