--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -13,21 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
+            <fragment
+                android:name="in.eigene.miary.fragments.FeedFragment"
+                android:id="@+id/fragment_feed"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/feed_item_external_margin"
+                android:layout_marginRight="@dimen/feed_item_external_margin"
+                android:layout_marginBottom="@dimen/feed_item_external_margin"
+                tools:layout="@layout/fragment_feed"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
             <include layout="@layout/toolbar"/>
-            <fragment android:name="in.eigene.miary.fragments.FeedFragment"
-                      android:id="@+id/fragment_feed"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:layout_marginLeft="@dimen/feed_item_external_margin"
-                      android:layout_marginRight="@dimen/feed_item_external_margin"
-                      android:layout_marginBottom="@dimen/feed_item_external_margin"
-                      tools:layout="@layout/fragment_feed"/>
-        </LinearLayout>
+        </android.support.design.widget.CoordinatorLayout>
         <!-- FAB. -->
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_button"
